text alignment fixes

--- a/static/style.css
+++ b/static/style.css
@@ -13,6 +13,10 @@ body {
   color: white;
 }
 
+.bodyoffset { 
+  margin-left: 1%;
+}
+
 /* Add a black background color to the top navigation */
 .topnav {
   background-color: #2A7E46;
@@ -153,7 +157,6 @@ body {
 .printbutton {
   position: absolute;
   top: 100%;
-  left: 2%;
   background-color: #4CAF50;
   text-align: center;
   border-radius: 4px;
